--- a/.travis.yml
+++ b/.travis.yml
@@ -1,95 +1,4 @@
-# Comments
-language: cpp
-
-git:
-  depth: 1
-  quiet: true
-
-branches:
-  only:
-    - master
-
-addons:
-  apt:
-    packages:
-      - dos2unix
-  homebrew:
-    packages:
-      - gnu-sed
-      - grep
-      - dos2unix
-
-matrix:
-  include:
-
-    - name: "Linux with GCC"
-      os: linux
-      dist: bionic
-      arch: amd64
-      compiler: gcc
-      env:
-        - ARCH=x86_64
-        - EXE=
-
-    - name: "Linux with clang"
-      os: linux
-      dist: bionic
-      arch: amd64
-      compiler: clang
-      env:
-        - ARCH=x86_64
-        - EXE=
-
-    - name: "macOS"
-      os: osx
-      osx_image: xcode11.3
-      compiler: clang
-      env:
-        - ARCH=x86_64
-        - EXE=
-
-    - name: "Windows 32"
-      os: windows
-      env:
-        - ARCH=Win32
-        - EXE=.exe
-
-    - name: "Windows 64"
-      os: windows
-      env:
-        - ARCH=x64
-        - EXE=.exe
-
+os: windows
+language: shell
 script:
-  # Comments in script
-  - pwd
-  - echo "TRAVIS_OS_NAME=$TRAVIS_OS_NAME"
-  - echo "CC=$CC"
-  - echo "GCC=$GCC"
-
-  # Blank line and comments in script
-  - echo "CXX=$CXX"
-  - echo "ARCH=$ARCH"
-  - echo "PATH=$PATH"
-  - |-
-    if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-        powershell -NoLogo -ExecutionPolicy RemoteSigned ./Build.ps1 -Arch $ARCH
-    else
-        make
-    fi
-  - ls -lA Release-$ARCH
-  - |-
-    if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-        Release-$ARCH/app_dll.exe
-    else
-        Release-$ARCH/app_dll
-    fi
-  - Release-$ARCH/app$EXE
-  - |-
-    if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-        tsduck/tsversion.exe --version=all
-    fi
-  - |-
-    if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-        powershell  "& tsduck/tsversion.exe --version=all"
-    fi
+  - powershell -c 'Get-WindowsFeature'
