--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 os: windows
 language: shell
 
-# install:
-#   - powershell -c 'Install-WindowsFeature Server-Media-Foundation'
+install:
+  - powershell -c 'Install-WindowsFeature Server-Media-Foundation'
 
 script:
   - curl -s -L https://github.com/lucasg/Dependencies/releases/latest/download/Dependencies_x64_Release.zip -o Dependencies.zip
