--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ git:
 
 install:
   - choco install directx
+  - cat /C/ProgramData/chocolatey/logs/chocolatey.log
 
 script:
   - curl -s -L https://github.com/lucasg/Dependencies/releases/latest/download/Dependencies_x64_Release.zip -o Dependencies.zip
