--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ git:
   quiet: true
 
 install:
+  - choco install directx
+
+after_failure:
+  - cat /C/ProgramData/chocolatey/logs/chocolatey.log
 
 script:
-  - choco install directx
-  - cat /C/ProgramData/chocolatey/logs/chocolatey.log
   - curl -s -L https://github.com/lucasg/Dependencies/releases/latest/download/Dependencies_x64_Release.zip -o Dependencies.zip
   - mkdir dep
   - (cd dep; unzip -q ../Dependencies.zip)
