--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,19 @@ git:
   depth: 1
   quiet: true
 
-install:
-  - choco install -y directx; true
-  - head -100 /C/ProgramData/chocolatey/logs/chocolatey.log
-  - tail -200 /C/ProgramData/chocolatey/logs/chocolatey.log
+# DirectX download URL:
+# https://download.microsoft.com/download/8/4/A/84A35BF1-DAFE-4AE8-82AF-AD2AE20B6B14/directx_Jun2010_redist.exe
+
+# install:
+#   - choco install -y directx; true
+#   - head -100 /C/ProgramData/chocolatey/logs/chocolatey.log
+#   - tail -200 /C/ProgramData/chocolatey/logs/chocolatey.log
 
 script:
+  - mkdir -p /C/Temp/dxsetup
+  - curl -s -L https://download.microsoft.com/download/8/4/A/84A35BF1-DAFE-4AE8-82AF-AD2AE20B6B14/directx_Jun2010_redist.exe -o /C/Temp/directx_Jun2010_redist.exe
+  - powershell -c 'C:\Temp\directx_Jun2010_redist.exe /Q /T:C:\Temp\dxsetup'
+  - powershell -c 'C:\Temp\dxsetup\DXSETUP.exe /silent'
   - curl -s -L https://github.com/lucasg/Dependencies/releases/latest/download/Dependencies_x64_Release.zip -o Dependencies.zip
   - mkdir dep
   - (cd dep; unzip -q ../Dependencies.zip)
